More opens for spark test code.